added correct auth check
