# app/backend/cmd/api/docs/swagger.json
@@ -57,6 +57,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a defect attachment by attachment ID",
                 "consumes": [
                     "application/json"
@@ -244,6 +249,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new building record",
                 "consumes": [
                     "application/json"
@@ -338,6 +348,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete building by id",
                 "consumes": [
                     "application/json"
@@ -386,6 +401,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Partially update building (name/address/stage)",
                 "consumes": [
                     "application/json"
@@ -835,6 +855,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete defect by id",
                 "consumes": [
                     "application/json"
@@ -998,6 +1023,11 @@
         },
         "/api/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve list of all users",
                 "consumes": [
                     "application/json"
@@ -1084,6 +1114,11 @@
         },
         "/api/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve user by numeric id",
                 "consumes": [
                     "application/json"
@@ -1132,6 +1167,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete user by numeric id",
                 "consumes": [
                     "application/json"
@@ -1180,6 +1220,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user's name and/or lastname",
                 "consumes": [
                     "application/json"
